# ReCiel

./: .gitignore  README.md  ciel.py  main.py  pyproject.toml
cogs/: develop.py  error.py  general.py
cogs/develop/: core.py  embed.py
cogs/music/: agent.py  core.py  embed.py  error.py  errors.py  model.py  view.py  youtube.py
utils/: __init__.py  agent.py  commands.py  decorators.py  embed.py  error.py  errors.py  logging.py  types.py  view.py
